feat: add header

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,22 @@
     <title>CV</title>
 </head>
 <body>
-    <header></header>
+    <div class="wrapper">
+        <div class="wrapper-information">
+            <header>
+                <h1>Raman Buchko</h1>
+                <h2>frontend developer</h2>
+            </header>
+            <main>
+                <section>
+
+                </section>
+            </main>
+        </div>
+        <aside>
+            
+        </aside>
+    </div>
     <footer></footer>
 </body>
 </html>
