feat: add main and aside

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,70 @@
             </header>
             <main>
                 <section>
-
+                    <div class="wrapper-header-section">
+                        <p>01</p>
+                        <h2>About me</h2>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="about-me">
+                            I’m a purposeful and highly motivated person who’s able 
+                            to work in multitasking mode and has such quolaties 
+                            as sociability, flexibility and dependadility wich make me good at teamwork.
+                            I have developed organizaonal and management skills.
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="wrapper-header-section">
+                        <p>02</p>
+                        <h2>experience</h2>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="experience">
+                            
+                        </p>
+                    </div>
                 </section>
             </main>
         </div>
         <aside>
-            
+            <img src="assets/images/avatar.png" alt="Avatar">
+            <div class="wrapper-aside">
+                <section class="contact">
+                    <h2>Contacts</h2>
+                    <ul>
+                        <li><a href="tel:+375447950242"><img src="assets/images/call.svg" alt="call"> +375447950242</a></li>
+                        <li><a href="mailto: su-24@tut.by"><img src="assets/images/mail.svg" alt="mail"> su-24@tut.by</a></li>
+                    </ul>
+                </section>
+                <section class="portfolio">
+                    <h2>Portfolio</h2>
+                    <ul>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/virtual-keyboard/">Virtual keyboard</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/shelter/pages/main/main.html">Shelter</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/gem-puzzle/">Puzzle game</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/momentum/#">Momentum</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/english-for-kids/#">English for kids</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/covid-dashboard/dist/">Covid-dashboard</a></li>
+                        <li><a href="https://vladimir6332.github.io/Game/#/">Tanks</a></li>
+                    </ul>
+                </section>
+                <section class="tools">
+                    <h2>Tools</h2>
+                    <ul class="tools-ul">
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>JavaScript</li>
+                        <li>Webpack 5</li>
+                    </ul>
+                </section>
+                <section class="languages">
+                    <h2>Languages</h2>
+                    <ul>
+                        <li>English A2+</li>
+                    </ul>
+                </section>
+            </div>
         </aside>
     </div>
     <footer></footer>
