--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,95 @@
                         <h2>experience</h2>
                     </div>
                     <div class="wrapper-main-section">
-                        <p class="experience">
-                            
-                        </p>
+                        <p class="local">Academy of Sciences Institute of Physics B.I. Stepanova</p>
+                        <p class="name">Junior Research Fellow</p>
+                        <p class="time">Feb 2017 — till now</p>
                     </div>
                 </section>
+                <section>
+                    <div class="wrapper-header-section">
+                        <p>03</p>
+                        <h2>Education</h2>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">BSUIR</p>
+                        <p class="name">Radio Engineering and Electronics (Electronic Engineer)</p>
+                        <p class="time">2017, full-time education</p>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">IPNK NAS RB</p>
+                        <p class="name">(Master of Physics and Mathematics)</p>
+                        <p class="time">2019, full-time education</p>
+                    </div>
+                </section>
+                <section>
+                    <div class="wrapper-header-section">
+                        <p>04</p>
+                        <h2>Courses & trainings</h2>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">Skyeng English School Online</p>
+                        <p class="name">English level A2+</p>
+                        <p class="time">Feb 2020 — till now</p>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">The Rolling Scopes School</p>
+                        <p class="name">Frontend developer</p>
+                        <p class="time">Sep, 2020 — Feb, 2021</p>
+                    </div>
+                </section>
+                <section>
+                    <div class="wrapper-header-section">
+                        <p>05</p>
+                        <h2>Skills</h2>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">Hard skills:</p>
+                        <ul class="hard-skills">
+                            <li>CSS</li>
+                            <li>HTML</li>
+                            <li>JavaScript</li>
+                            <li>Webpack 5</li>
+                            <li>Git</li> 
+                        </ul>
+                        <p class="name">
+                            Skills of binding to the user interface of scripts 
+                            that provide visualization and animation of site pages.
+                        </p>
+                        <p class="name">
+                            Experience in creating an HTML website page based 
+                            on design layouts.
+                        </p>
+                    </div>
+                    <div class="wrapper-main-section">
+                        <p class="local">Soft skills:</p>
+                        <ul>
+                            <li><span>sociability</span></li>
+                            <li><span>self-discipline</span></li>
+                            <li><span>responsibility</span></li>
+                            <li><span>reliability</span></li>
+                            <li><span>flexibility</span></li>
+                            <li><span>critical thinking</span></li>
+                            <li><span>perseverance</span></li>
+                            <li><span>motivation</span></li>
+                            <li><span>attention to detail</span></li>
+                        </ul>
+                    </div>
+                </section>
+            <section>
+                <div class="wrapper-header-section">
+                    <p>06</p>
+                    <h2>About me</h2>
+                </div>
+                <div class="wrapper-main-section">
+                    <p class="about-me">
+                        I’m a purposeful and highly motivated person who’s able 
+                        to work in multitasking mode and has such quolaties 
+                        as sociability, flexibility and dependadility wich make me good at teamwork.
+                        I have developed organizaonal and management skills.
+                    </p>
+                </div>
+            </section>
             </main>
         </div>
         <aside>
@@ -70,6 +154,7 @@
                         <li>HTML</li>
                         <li>JavaScript</li>
                         <li>Webpack 5</li>
+                        <li>Git</li>
                     </ul>
                 </section>
                 <section class="languages">
@@ -81,6 +166,8 @@
             </div>
         </aside>
     </div>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
