--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,36 @@
         </aside>
     </div>
     <footer>
-        
+        <div class="wrapper-footer">
+            <h2>contacts & portfolio</h2>
+            <div class="wrapper-contact-portfolio">
+                <div class="wrapper-contact">
+                    <ul>
+                        <li><a href="tel:+375447950242"><img src="assets/images/call.svg" alt="call"> +375447950242</a></li>
+                        <li><a href="mailto: su-24@tut.by"><img src="assets/images/mail.svg" alt="mail"> su-24@tut.by</a></li>
+                    </ul>
+                </div>
+                <div class="wrapper-portfolio">
+                    <ul>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/virtual-keyboard/">Virtual keyboard</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/shelter/pages/main/main.html">Shelter</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/gem-puzzle/">Puzzle game</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/momentum/#">Momentum</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/english-for-kids/#">English for kids</a></li>
+                        <li><a href="https://rolling-scopes-school.github.io/frenki1231-JS2020Q3/covid-dashboard/dist/">Covid-dashboard</a></li>
+                        <li><a href="https://vladimir6332.github.io/Game/#/">Tanks</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper-rsschool-footer">
+            <a href="https://github.com/frenki1231"><img src="./assets/images/github-logo.svg" alt="github"></a>
+            <div class="wrapper-rsschool">
+                <a href="https://rs.school/js/"><img src="./assets/images/rs_school_js.svg" alt="rsschool"></a>
+                <p>2021</p>
+            </div>
+            <a href="https://github.com/frenki1231"><img src="./assets/images/YouTube.svg" alt="rsschool"></a>
+        </div>
     </footer>
 </body>
 </html>
