--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                         <p class="time">Feb 2020 — till now</p>
                     </div>
                     <div class="wrapper-main-section">
-                        <p class="local">The Rolling Scopes School</p>
+                        <a class="local" href="https://app.rs.school/certificate/eqyvoj62">The Rolling Scopes School</a>
                         <p class="name">Frontend developer</p>
                         <p class="time">Sep, 2020 — Feb, 2021</p>
                     </div>
